# binary-sealing

./: Crossing 3 Things.md  GOVERNANCE.md
logline-projection-kernel/: .gitignore  ChatGPT-Dreamy CLI Evolution (1).md  LICENSE  README.md  pyproject.toml
logline-projection-kernel/docs/: 00_doctrine.md  01_processual_registration.md  02_nine_slots.md  03_process_lights.md  04_flux_cerebro_projection.md  05_diamonds.md  06_access_revocation_resolution.md  glossary.md
logline-projection-kernel/examples/: 01_register_flux.py  02_run_flux.py  03_index_cerebro.py  04_build_projection.py  05_find_anchor.py  06_test_sealability.py  07_build_diamond_candidate.py  08_seal_diamond.py  09_access_diamond.py  10_supersede_diamond.py  11_resolve_current_diamond.py  12_seal_binary_diamond.py
logline-projection-kernel/logline_kernel/: __init__.py
logline-projection-kernel/schemas/: act.schema.json  anchor_package.schema.json  cerebro_source.schema.json  diamond_access_receipt.schema.json  diamond_manifest.schema.json  diamond_resolution.schema.json  diamond_state_event.schema.json  flux_manifest.schema.json  process_contract.schema.json  process_record.schema.json  projection.schema.json  sealability_report.schema.json
logline-projection-kernel/scripts/: make_demo_nas_tree.py  run_golden_path.py  verify_repo_vectors.py
logline-projection-kernel/tests/: test_act_process_id.py  test_anchor_finder.py  test_cerebro_indexer.py  test_diamond_access_gate.py  test_diamond_manifest_builder.py  test_diamond_receipts_v0.py  test_diamond_resolver.py  test_diamond_sealer.py  test_hashing.py  (+11 more)
(+132 files in other folders)
